--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "build": "forge build --sizes",
     "check:license": "pipx run reuse lint",
     "clean": "rm -rf cache out",
-    "lint:sol": "solhint  contracts/**/*.sol --fix",
+    "lint:sol": "solhint  src/contracts/**/*.sol --fix",
     "lint:ts": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js,.ts . --fix",
     "prettier": "prettier --config ./.prettierrc.json --ignore-path ./.prettierignore --write \"**/*.{js,json,md,sol,ts}\"",
     "slither": "pipx run --spec slither-analyzer slither . --skip-assembly --include-paths ./src/contracts",
-    "test": "forge test",
+    "test": "forge test --gas-report",
     "test:coverage": "forge coverage --nmco '.*\\.(t|s)\\.sol$'",
     "test:coverage:report": "forge coverage --nmco '.*\\.(t|s)\\.sol$' --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage"
   },
@@ -45,7 +45,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.0",
     "solhint": "^5.0.0",
     "solhint-plugin-prettier": "^0.1.0",
